src/Pages/Projects/Projects.css
.project-section {
    display: flex;
    flex-direction: row;
}
.project-selector {
    display: flex;
    max-width: 250px;
    min-width: 150px;
    flex-direction: column;
    align-content: center;
    margin-left: 50px;
    margin-top: 30vh;
    font-size: 2.5rem;
}

.project-selector .select-row {
    max-width: 200px;
    justify-content: space-between;
}

.project-selector .triangle {
    padding-right: 10px;
}

.project-selector .text-selection {
    font-size: 2.5rem;
}

.project-card-container {
    border: 5px ridge #75736f;
    display: flex;
    height: 60vh;
    width: 30%;
    align-content: center;
    flex-direction: column;
    margin-top: 10vh;
    margin-right: 15%;
    margin-left: auto;
  }

.win-bar {
    background-color: #c3d2f1;
    border-bottom: 3px ridge #746f75;
    text-align: left;
    width: calc(100% - 2px);
    height: 26px;
    color: black;
}

.win-close-button {
  background-image: url(./closeicon.png);
}
.win-min-button {
  background-image: url(./minimizeicon.png);
}
.win-full-button {
  background-image: url(./fullviewicon.png);
}
.win-upd-button {
  background-image: url(./updateicon.png);
}

.win-close-button, .win-min-button, .win-full-button, .win-upd-button {
  background-position: center;
  background-size: cover;
  width: 18px;
  height: 18px;
  float: left;
  margin: 4px 2px 4px 2px;
  cursor: help;
}

.win-text {
  background-color: #7a6573;
  border: 3px ridge #746f75;
  color: white;
  width: calc( 100% - 96px );
  margin: auto;
  height: 22px;
  box-sizing: border-box;
  margin: 2px;
  float: right;
  font: normal 15px 'Kosugi';
  text-align: left;
  padding-left: 4px;
  vertical-align: middle;
  line-height: 18px;
  text-shadow: 1px 1px black;
}
  
.project-card {
    height: calc(100% - 28px);
    display: flex;
    flex-direction: column;
    background-color: rgb(136, 165, 136);
}

.project-card-description::-webkit-scrollbar {
    display:none;
}

.project-card-image-container {
    width: 100%;
    max-height: 52%;
    display: flex;
    justify-content: center;
}

.project-card-description {
    font-size: 1.5em;
    margin-top: auto;
    margin-bottom: 20px;
    margin-left: 20px;
    margin-right: 20px;
    overflow-y: scroll;
    overflow-x: hidden;
    max-height: 50%;
}

